@startuml libfilesync-curl-class

title libfilesync cURL Class Diagram

package libfilesync {

        class FileSyncException
        interface ProtocolClient
        class "ProtocolClient<concrete>" as concreteProtoClient 

    package curl {
        class "Exception" as CurlException
        abstract class "ProtocolClient" as CurlProtocolClient
        class "ProtocolClient<concrete>" as CurlConcreteProtocolClient
        class "Url" as CurlUrl
        class "Easy" as CurlEasy
        class "Setup" as CurlSetup
        package option {
            interface "Option" as CurlOption
        }
    
    }
}

package "External" {
    class libcurl
}

ProtocolClient <|-- concreteProtoClient

concreteProtoClient "1" o-- "1" CurlConcreteProtocolClient
CurlConcreteProtocolClient --|> CurlProtocolClient
CurlProtocolClient "1" o-- "1" CurlUrl

FileSyncException <|-- CurlException
CurlOption --> CurlEasy
CurlProtocolClient "1" o-- "*" CurlOption

CurlProtocolClient "1" o-- "1" CurlEasy

CurlUrl -> CurlSetup
CurlSetup <- CurlEasy

CurlUrl --> libcurl
CurlEasy --> libcurl
CurlSetup --> libcurl

@enduml